# VRP_Comparison

./: Readme.md
DBoW2/DBoW/: DBoW.cpp  DBoW.vcxproj  DBoW.vcxproj.filters  bow2_all.txt  bow2_feature_extraction.txt  result.txt  result_kitti1.txt  result_kitti2.txt  result_kitti3.txt  small_voc.yml  voc.yml
DBoW2/DBoW/x64/Debug/: DBoW.pch  vc141.idb
DBoW2/DBoW/x64/Debug/DBoW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DBoW.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DBoW2/DBoW/x64/Release/: DBoW.pch
DBoW2/DBoW/x64/Release/DBoW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DBoW.lastbuildstate  DBoW.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DBoW2/x64/Release/: DBoW.iobj  DBoW.ipdb
HALOC/DBoW/: DBOW3.xlsx  DBoW.vcxproj  DBoW.vcxproj.filters  DescriptorFilter.h  count_recall_rate.m  display.m  haloc_all.txt  haloc_feature_extraction.txt  result0.txt  result0_40.txt  result0_45.txt  result0_50.txt  result0_55.txt  result0_60.txt  result1.txt  result2.txt  result3.txt  result4.txt  result5.txt
HALOC/DBoW/x64/Release/HALOC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HALOC.lastbuildstate  HALOC.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HALOC/DBoW/x64/Release/HBST.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HBST.lastbuildstate  HBST.write.1u.tlog  link.read.1.tlog  link.write.1.tlog
HALOC/src/: Util.cpp  hash.cpp  hash.h  main.cpp  publisher.cpp  publisher.h  state.h
HALOC/x64/Release/: HALOC.ipdb  HBST.iobj  HBST.ipdb
HBST/DBoW/: DBoW.vcxproj  DBoW.vcxproj.filters  DescriptorFilter.cpp  Util.h  hbst_all.txt  hbst_feature_extraction.txt  result1.txt  result3.txt  test.h  test.m  论据.txt
HBST/DBoW/x64/Release/HBST.tlog/: CL.read.1.tlog  CL.write.1.tlog  HBST.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HBST/HBST/: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml
HBST/HBST/srrg_hbst/types/: binary_match.hpp  binary_matchable.hpp  binary_node.hpp  binary_tree.hpp
HBST/HBST/srrg_hbst/types_probabilistic/: probabilistic_matchable.hpp  probabilistic_node.hpp
HBST/src/: main.cpp  match_incremental.cpp  recognizer_node.cpp  test_fixture.hpp  test_search.cpp  test_streaming.cpp
HBST/test_images/: image_01.pgm  image_02.pgm  image_03.pgm  image_04.pgm  image_05.pgm  image_06.pgm  image_07.pgm  image_08.pgm  image_09.pgm
HBST/x64/Release/: HBST.iobj  HBST.ipdb
iBoW/DBoW/: DBoW.cpp  DBoW.vcxproj  DBoW.vcxproj.filters  count_recall_rate.m  display.m  ibow_all.txt  ibow_all123.txt  ibow_feature_extraction.txt  result.txt  test.cpp
iBoW/DBoW/x64/Release/IBoW.tlog/: CL.command.1.tlog  (+7 more)
iBoW/ibow/src/: binary_descriptor.cc  binary_descriptor.h  binary_index.cc  binary_index.h  binary_tree.cc  binary_tree.h  binary_tree_node.cc  binary_tree_node.h  lcdetector.cc  lcdetector.h  main.cc  priority_queues.h
iBoW/x64/Release/: IBoW.ipdb
